Second commit Fixing the Route into products/search/{searchWord}
In this commit it edits the previous functions, combining all changes together, here are the changes:
- Creating new route from the backend (Product Controller and Product Repository new added codes)
- The search bar is still with the main nav bar but the result will redirect it to a new search result page
- The new search result page also includes Navbar in it so the user can keep searching
- Css for item.-list-card is now set to max-width and amx-height so all the images will appear in the same size all the how the main page presents the products (not too big not too small)

--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -46,7 +46,12 @@
   transform: scale(1.1);
 }
 
-.item-list-card .item-image {
+.item-list-card {
+  max-width: 350px;
+  max-height: 550px;
+}
+
+.item-image {
   width: 350px;
   max-width: 100%;
 }
@@ -412,7 +417,7 @@ header {
 }
 
 .searchResultItemInNav:hover {
-    background-color: #fafaee;
+    background-color: #f8f8e6;
 }
 
 .searchResultItemInNav img {
